# test_task_workmate

./: README.md  pyproject.toml
app/: config.py  constants.py  main.py  output.py  read.py  report_functions.py
tests/: conftest.py  test_output.py  test_read.py  test_report.py
