[project]
name = "test-task-workmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "tabulate>=0.10.0",
]

[tool.pytest.ini_options]
addopts = '-v'
pythonpath = [
    'app',
    '.'
]